Spec #21143: add initial BarPlot geom and LABKEY.vis.BarPlot helper - currently only D3, still need to do RaphaelRenderer version - includes 2 examples in the demo_script - includes option to show cumulative totals

--- a/internal/webapp/vis/demo/index.html
+++ b/internal/webapp/vis/demo/index.html
@@ -53,6 +53,12 @@
 <div class="example" id="statFn">
 </div>
 
+<div class="example" id="bar">
+</div>
+
+<div class="example" id="bar2">
+</div>
+
 <div class="example" id="stats">
 </div>
 
