Add bin examples to vis demo.

--- a/internal/webapp/vis/demo/index.html
+++ b/internal/webapp/vis/demo/index.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src="../lib/patches.js"></script>
     <script type="text/javascript" src="../lib/d3-3.3.9.js"></script>
     <script type="text/javascript" src="../lib/raphael-min-2.1.0.js"></script>
+    <script type="text/javascript" src="../lib/hexbin.min.js"></script>
+    <script type="text/javascript" src="../lib/sqbin.min.js"></script>
     <style type="text/css">
         .example {
             width: 900px;
@@ -41,6 +43,12 @@
 <div class="example" id="colorScatter">
 </div>
 
+<div class="example" id="binScatter">
+</div>
+
+<div class="example" id="binScatter2">
+</div>
+
 <div class="example" id="brushing">
 </div>
 
@@ -57,6 +65,9 @@
 </div>
 
 <div class="example" id="bar2">
+</div>
+
+<div class="example" id="bin">
 </div>
 
 <div class="example" id="stats">
