Spec #22325: add LABKEY.vis.SurvivalCurvePlot example to vis demo page

--- a/internal/webapp/vis/demo/index.html
+++ b/internal/webapp/vis/demo/index.html
@@ -85,6 +85,9 @@
 <div class="example" id="leveyJennings">
 </div>
 
+<div class="example" id="survivalCurve">
+</div>
+
 <div class="example" id="stats">
 </div>
 
