Spec 23019: Add ability to have x-axis on top of plot.  Add example to demo script.

--- a/internal/webapp/vis/demo/index.html
+++ b/internal/webapp/vis/demo/index.html
@@ -38,6 +38,9 @@
 <div class="example" id="coffeePlot">
 </div>
 
+<div class="example" id="coffeeXTopPlot">
+</div>
+
 <div class="example" id="box">
 </div>
 
